/*!\page PPL6History PPL6 History
PPL6 - HISTORY

Version 6.4.14
  - Bugfix beim Einlesen von ID3-Tag-Covern mit UTF-16-Encoding
  - Bugfix: Potentieller Memory-Leak in CTCPSocket::WaitForMessage gefixt
  - Bugfix: Fehler im Aufbau der verketteten Liste der Klasse CSSL behoben
  - Change: CSSL verwendet malloc und free statt CHeap 
  
Version 6.4.13  vom 27.07.2012	(CVS-Tag: REL_6_4_13)
  - Kleinere Kompatibilitätsprobleme unter Windows behoben
  - Fehler in Postgres-DB-Anbindung behoben, wodurch mit FetchArray
    oder FetchFields mehr Zeilen gelesen wurden, als im
    Result vorhanden war
  - DB-Connect mit Postgres-Datenbank unterstützt jetzt Parameter
    "searchpath" zum Setzen des Suchpfades.
  - CString unterstützt Ausgabe als Stream
  - Erkennung der FreeTDS-Library für Sybase erneuert 
  - CDateTime Genauigkeit auf Mikrosekunden erhöht
  - Format des Integer-Wertes von CDateTime::longInt hat sich geändert
    und ist inkompatibel zu vorher.
  - Testsuite mit Unittests für CDateTime erstellt (Verwendung von
    Google-Test)
  - Bugfix in CString::PregReplace

Version 6.4.12  vom 04.04.2012	(CVS-Tag: REL_6_4_12)
  - Datenbank: Strings werden nun in Hochkommata statt Anführungszeichen
    gesetzt
  - Datenbank: Datentypen werden in Abhängigkeit ihres Types und der
    Datenbank escaped und gequoted. Neue Funktion Database::getQuoted
  - Datenbank: Mutexe aus den Datenbanken entfernt. Die Anwendung ist
    dafür verantwortlich parallelen Zugriff zu verhindern.
  - Backport von PPL7: CDir::homePath und CDir::tempPath
  - Funktion ppl6::db::GetSupportedDatabases hinzugefügt
  - Unterstützung für Datenbank SQLite3 (experimentell)
    
Version 6.4.11 vom 19.02.2012	(CVS-Tag: REL_6_4_11)
  - Bugfix in PNG-Laderoutine
  - Kritischer Bugfix in Sybase::Ping: Result wurde nicht freigegeben, wodurch
    nachfolgende Operationen blockiert und die Verbindung somit
    unbrauchbar wurde
  - Neue Klasse: PerlHelper